# ProjetoFinalSupercomp

./: CMakeLists.txt  README.md  Relatorio_projetoFinal_entregaFinal.ipynb  backtrack.py  branch_and_bound_par.cpp  branch_and_bound_seq.cpp  busca_exaustiva_par.cpp  busca_local.cu  busca_local_par.cpp  cria_entrada.py  entrada1  entrada2  entrada3
bls.dSYM/Contents/: Info.plist
bls.dSYM/Contents/Resources/DWARF/: bls
